objects/LLC_BI__Profitability__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Total_Assets_for_Loans__c</fullName>
        <description>The system autopopulates this field using the profitability model in the context of a loan. In the context of a relationship, this field is an aggregated value of all Total Assets for Loans for loan products associated to it.</description>
        <label>Total Assets for Loans</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Assets_for_Treasury__c</fullName>
        <description>Users manually populate this field to represent the Total Assets for Treasury for all treasury services.</description>
        <label>Total Assets for Treasury</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Prepayment_Loss__c</fullName>
        <description>The system automatically populates this optional field that represents the amount of money that a lender could potentially lose based on the potential interest income lost and the potential loss recovered from an incurred prepayment penalty.</description>
        <label>Total Prepayment Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Treasury_EVA__c</fullName>
        <description>The system populates this field to represent the Economic Value Added for treasury products. By default, it is blank.</description>
        <label>Treasury EVA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Treasury_Expected_Losses__c</fullName>
        <description>The system populates this field to represent the approximate Expected Losses of treasury products. By default, it is blank.</description>
        <label>Treasury Expected Losses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Treasury_Operating_Cost__c</fullName>
        <description>The system populates this field to represent the approximate Operating Cost of treasury products. By default, it is blank.</description>
        <label>Treasury Operating Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Treasury_Revenue__c</fullName>
        <description>The system populates this field to represent the calculated revenue of treasury products. By default, it is blank.</description>
        <label>Treasury Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Profitability</label>
    <nameField>
        <displayFormat>PROF-{0000000000}</displayFormat>
        <label>Profitability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profitabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>